# Vizer_pronostics

./: .gitignore  ARCHITECTURE.md  config.template.yaml  design.md  pyproject.toml  requirements.txt
.github/workflows/: vizer_daily_predictions.yml  vizer_training_pipeline.yml
Vizer_nhl/: 01_Maintenance.ipynb  02_Agregation.ipynb  02b_Period_Data.ipynb  03_Entrainement.ipynb  04_Inference.ipynb  vizer_master_model_v5.joblib  vizer_utils.py
kaggle/: kernel-metadata.json  poll_kernel.py  vizer_training_notebook.py
predictions/latest/: nhl.json
vizer_core/: __init__.py  backtest.py  base_predictor.py  config_loader.py  market_base.py  model_registry.py  synthetic_odds_v2.py  unified_predictor.py
vizer_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vizer_core/utils/: __init__.py  leakage_check.py
vizer_nba/: .gitignore  README.md  USAGE.md  backtest_nba.py  bets_22025.csv  bets_22025_realistic.csv  diagnose_total.py  fetch_q1_data.py  predict_all.py  predict_json.py  predict_today.py  requirements.txt  train.py  train_full.py  update_and_train.py
vizer_nba/models/: nba_model.pkl
vizer_nba/scripts/: README.md  fetch_all_datasets.sh  fetch_nba_games.py  fetch_nba_player_games.py  fetch_nba_players.py  fetch_nba_teams.py  push_dataset_to_kaggle.py  validate_datasets.py
vizer_nba/tests/: test_registry.py
vizer_nhl/: backtest_nhl.py  config.yaml  predict_all.py  test.py  train.py  update_data.py
vizer_nhl/data/: .gitignore  README.md
vizer_nhl/models/: nhl_model.pkl
vizer_nhl/odds_cache/: icehockey_nhl_2026-05-20.json  (+1 more)
(+64 files in other folders)
