[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vizer-core"
version = "0.2.0"
description = "Abstractions partagées pour les modèles de prédiction sportive Vizer (NBA, NHL, ...)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["vizer_core*"]
